--- a/Resources/Private/Partials/ContentElements/Media/Render/Image.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Image.html
@@ -1,5 +1,5 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:media class="image-partial__item img-fluid" file="{image}" alt="{image.alternative}" loading="lazy" />
+<f:image class="image-partial__item img-fluid" image="{image}" cropVariant="default" alt="{image.alternative}" loading="lazy" />
 
 </html>
