--- a/Resources/Private/Partials/ContentElements/Media/Render/Svg.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Svg.html
@@ -4,8 +4,7 @@
   <f:variable name="role" value="{role: 'img'}" />
 </f:if>
 
-<f:image class="svg-partial__item svg-fluid
-  {f:if(condition:height,then:' svg-full-width')}"
+<f:image class="svg-partial__item svg-fluid"
   image="{file}"
   width="{file.referenceProperties.svg_width}m"
   minWidth="{file.referenceProperties.svg_width}"
