--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
@@ -22,8 +22,9 @@
     <div class="ce-img-text-link">
 
       <f:if condition="{files}">
-        <div class="ce-img-text-link__picture">
-          <f:render partial="Media/Type" arguments="{_all}" />
+        <div class="ce-img-text-link__picture {f:if(condition:height, then: 'fixed-height')}"
+          {f:if(condition:height, then: 'style="height: {height}px;"')}>
+            <f:render partial="Media/Type" arguments="{_all}" />
         </div>
       </f:if>
 
@@ -31,8 +32,9 @@
 
         <f:if condition="{svg_image}">
           <div class="ce-img-text-link__svg-image
-            text-{data.header_position}">
-            <f:render partial="Media/Svg" arguments="{data: data, files: svg_image, height: height}" />
+            text-{data.header_position} {f:if(condition:height, then: 'fixed-height')}"
+            {f:if(condition:height, then: 'style="height: {height}px;"')}>
+            <f:render partial="Media/Svg" arguments="{data: data, files: svg_image, height: heightd}" />
           </div>
         </f:if>
 
