--- a/theme/src/scss/global/typography.scss
+++ b/theme/src/scss/global/typography.scss
@@ -19,7 +19,6 @@ h3,
 h4,
 h5,
 h6 {
-  text-transform: var(--t3-headings-text-transform);
   color: var(--t3-headings-color);
 }
 
@@ -40,6 +39,16 @@ h1,
 h2,
 h3,
 h4,
+.h1,
+.h2,
+.h3,
+.h4,
+.large_h1,
+.large_h2,
+.large_h3,
+.large_h4,
+.large_h5,
+.large_h6,
 .fluid-font-size {
   --t3-fluid-font-size:
     calc(
@@ -58,40 +67,80 @@ h4,
   h2,
   h3,
   h4,
+  .h1,
+  .h2,
+  .h3,
+  .h4,
+  .large_h1,
+  .large_h2,
+  .large_h3,
+  .large_h4,
+  .large_h5,
+  .large_h6,
   .fluid-font-size {
     font-size: var(--t3-font-size-to-rem);
   }
 }
 
 h5,
-h6 {
+h6,
+.h5,
+.h6 {
   font-size: var(--t3-font-size-to-rem);
 }
 
-h1 {
+h1,
+.h1 {
   --font-size: var(--t3-h1-font-size);
 }
 
-h2 {
+h2,
+.h2 {
   --font-size: var(--t3-h2-font-size);
 }
 
-h3 {
+h3,
+.h3 {
   --font-size: var(--t3-h3-font-size);
 }
 
-h4 {
+h4,
+.h4 {
   --font-size: var(--t3-h4-font-size);
 }
 
-h5 {
+h5,
+.h5 {
   --font-size: var(--t3-h5-font-size);
-  // font-size: var(--t3-h5-font-size);
 }
 
-h6 {
+h6,
+.h6 {
   --font-size: var(--t3-h6-font-size);
-  // font-size: var(--t3-h6-font-size);
+}
+
+.large-h1 {
+  --font-size: var(--t3-large-h1-font-size);
+}
+
+.large-h2 {
+  --font-size: var(--t3-large-h2-font-size);
+}
+
+.large-h3 {
+  --font-size: var(--t3-large-h3-font-size);
+}
+
+.large-h4 {
+  --font-size: var(--t3-large-h4-font-size);
+}
+
+.large-h5 {
+  --font-size: var(--t3-large-h5-font-size);
+}
+
+.large-h6 {
+  --font-size: var(--t3-large-h6-font-size);
 }
 
 .fluid-font-size {
