[TASK] add additional status reports to check t3kit default admin user and Installtool pass.

--- a/Resources/Public/CSS/BE/content-elements-preview.css
+++ b/Resources/Public/CSS/BE/content-elements-preview.css
@@ -65,3 +65,14 @@
 .t3kit-ce-footer--special {
   background: #42895417;
 }
+
+.t3kit-preview-wrp img {
+  background: #e8e8e8;
+  padding: 4px;
+}
+
+.t3kit-status-report-link {
+  text-decoration: underline;
+  font-weight: bold;
+  font-style: italic;
+}
