--- a/Resources/Private/Partials/PageLayout/Record/imageTextLink/Preview.html
+++ b/Resources/Private/Partials/PageLayout/Record/imageTextLink/Preview.html
@@ -1,3 +1,5 @@
-{item.preview -> f:format.raw()}
+<div class="t3kit-preview-wrp">
+  {item.preview -> f:format.raw()}
+</div>
 <p class="t3kit-ce-subheader">{item.record.subheader}</p>
 <f:format.nl2br>{item.record.bodytext}</f:format.nl2br>
