--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -53,7 +53,7 @@
 
     <section class="start-page__content">
 
-      <div class="container-wrp pt-2 pb-5">
+      <div class="container-wrp pt-2 pt-lg-4 ">
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div class="container-wrp black-bg-color pt-5 pb-5">
+      <div class="container-wrp pt-lg-5 pb-5">
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
@@ -90,14 +90,34 @@
       </div>
 
 
-      <div class="container-wrp">
+<f:comment>
+  <div class="container-wrp black-bg-color pt-5 pb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3304}" />
+        </div>
+
+        <div class="col-lg-4">
+          <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3305}" />
+        </div>
+
+        <div class="col-lg-4">
+          <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3306}" />
+        </div>
+      </div>
+    </div>
+  </div>
+</f:comment>
+
+      <div class="container-wrp pb-5 pb-lg-0 ">
         <div class="container">
           <div class="row g-0">
             <div class="col-lg-6 align-self-center figure-lg-margin-0">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
             </div>
 
-            <div class="col-lg-5 offset-lg-1 align-self-center">
+            <div class="col-lg-4 offset-lg-1 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5002}" />
             </div>
           </div>
@@ -107,29 +127,29 @@
       <div class="container-wrp">
         <div class="container">
           <div class="row g-0">
-            <div class="col-lg-5 align-self-center">
+            <div class="offset-lg-1 col-lg-4 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5003}" />
             </div>
 
-            <div class="col-lg-6 offset-lg-1 align-self-center">
+            <div class="col-lg-6 offset-lg-1 align-self-center figure-lg-margin-0">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5004}" />
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container-wrp pt-5 pb-5">
+      <div class="container-wrp black-bg-color pt-5 pb-5">
         <div class="container">
-          <div class="row g-xl-5">
-            <div class="col-lg-4">
+          <div class="row g-xl-5 justify-content-center">
+            <div class="col-lg-3">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3307}" />
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3308}" />
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-3">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3309}" />
             </div>
           </div>
@@ -139,7 +159,7 @@
       <div class="container-wrp pt-5 pb-5">
         <div class="container">
           <div class="row ">
-            <div class="col-lg-4">
+            <div class=" col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3310}" />
             </div>
 
