--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -35,18 +35,18 @@
   --t3-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --t3-font-family-base: var(--t3-font-sans-serif);
   --t3-headings-color: var(--t3-body-color);
-  --t3-h1-font-size: 40;
-  --t3-h2-font-size: 32;
-  --t3-h3-font-size: 28;
-  --t3-h4-font-size: 24;
+  --t3-h1-font-size: 48;
+  --t3-h2-font-size: 40;
+  --t3-h3-font-size: 32;
+  --t3-h4-font-size: 26;
   --t3-h5-font-size: 20;
   --t3-h6-font-size: 16;
   --t3-large-h1-font-size: 80;
   --t3-large-h2-font-size: 70;
-  --t3-large-h3-font-size: 60;
-  --t3-large-h4-font-size: 55;
-  --t3-large-h5-font-size: 50;
-  --t3-large-h6-font-size: 45;
+  --t3-large-h3-font-size: 65;
+  --t3-large-h4-font-size: 60;
+  --t3-large-h5-font-size: 55;
+  --t3-large-h6-font-size: 50;
   --t3-link-color: var(--t3-secondary);
   --t3-link-hover-color: hsla(var(--t3-secondary-hs), var(--t3-secondary-l), 0.8);
   --t3-caption-color: #6c757d;
@@ -8438,7 +8438,7 @@ caption {
   --t3-btn-dark-active-border-color: hsl(var(--t3-btn-dark-bg-hs), calc(var(--t3-btn-dark-bg-l) - 13%));
   display: inline-block;
   font-weight: var(--t3-btn-font-weight);
-  line-height: 1.5;
+  line-height: 1.6;
   color: var(--t3-body-color);
   text-align: center;
   text-decoration: none;
@@ -9965,7 +9965,7 @@ fieldset:disabled .btn {
 
 @media (max-width: 575.98px) {
   .ce-hero-image__caption-wrp {
-    min-height: var(--t3-ce-hero-image-min-height-on-mobile) !important;
+    height: var(--t3-ce-hero-image-min-height-on-mobile) !important;
   }
 }
 @media (min-width: 768px) {
@@ -10072,6 +10072,10 @@ fieldset:disabled .btn {
 
 .ce-img-text-link__wrp.inverted-color {
   --t3-ce-itl-color: var(--t3-body-bg);
+}
+
+.inverted-color .ce-img-text-link__subheader .subheader-item {
+  color: var(--t3-primary);
 }
 
 .internal-margins .ce-img-text-link__body {
