--- a/theme/src/scss/appearance/background.scss
+++ b/theme/src/scss/appearance/background.scss
@@ -14,7 +14,11 @@
   background-color: var(--t3-dark);
 }
 
-.black-bg-color {
+.default-bg-color {
+  background-color: var(--t3-body-bg);
+}
+
+.inverted-bg-color {
   background-color: var(--t3-body-color);
 }
 
