[TASK] uodate start page BElayout

--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -89,58 +89,71 @@
         </div>
       </div>
 
-
-<f:comment>
-  <div class="container-wrp black-bg-color pt-5 pb-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3304}" />
-        </div>
-
-        <div class="col-lg-4">
-          <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3305}" />
-        </div>
-
-        <div class="col-lg-4">
-          <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3306}" />
-        </div>
-      </div>
-    </div>
-  </div>
-</f:comment>
-
-      <div class="container-wrp pb-5 pb-lg-0 ">
+      <div class="container-wrp inverted-bg-color pt-5 pb-5 pt-lg-7 pb-lg-7">
         <div class="container">
-          <div class="row g-0">
-            <div class="col-lg-6 align-self-center figure-lg-margin-0">
+          <div class="row g-5 justify-content-around">
+            <div class="col-lg-5 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
             </div>
 
-            <div class="col-lg-4 offset-lg-1 align-self-center">
+            <div class="col-lg-5 align-self-center">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5002}" />
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container-wrp">
+      <div class="container-wrp pt-5 pt-lg-0">
         <div class="container">
-          <div class="row g-0">
-            <div class="offset-lg-1 col-lg-4 align-self-center">
+          <div class="row g-0 ">
+            <div class="col-lg-6 align-self-center figure-lg-margin-0">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5003}" />
             </div>
 
-            <div class="col-lg-6 offset-lg-1 align-self-center figure-lg-margin-0">
+            <div class="col-lg-5 col-xl-4 offset-lg-1 align-self-center pb-5 pb-lg-0 ">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5004}" />
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container-wrp black-bg-color pt-5 pb-5">
+      <div class="container-wrp pt-8 pb-8 inverted-bg-color">
         <div class="container">
-          <div class="row g-xl-5 justify-content-center">
+          <div class="row">
+            <div class="offset-lg-1 col-lg-10">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:8300}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pb-5 pt-5 pt-lg-0">
+        <div class="container">
+          <div class="row g-0 justify-content-between">
+            <div class="col-lg-5 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5005}" />
+            </div>
+
+            <div class="col-lg-6  align-self-center figure-lg-margin-0">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5006}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pt-lg-8 ">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-9">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:8301}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pt-3 pb-5">
+        <div class="container">
+          <div class="row justify-content-center ">
             <div class="col-lg-3">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3307}" />
             </div>
@@ -156,10 +169,10 @@
         </div>
       </div>
 
-      <div class="container-wrp pt-5 pb-5">
+      <div class="container-wrp gray-90-bg-color pt-5 pb-5">
         <div class="container">
           <div class="row ">
-            <div class=" col-lg-4">
+            <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3310}" />
             </div>
 
@@ -169,6 +182,80 @@
 
             <div class="col-lg-4">
               <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3312}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pb-5 pb-lg-0 ">
+        <div class="container">
+          <div class="row g-0">
+            <div class="col-lg-6 align-self-center figure-lg-margin-0">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5007}" />
+            </div>
+
+            <div class="col-lg-4 offset-lg-1 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5008}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row g-0">
+            <div class="offset-lg-1 col-lg-4 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5009}" />
+            </div>
+
+            <div class="col-lg-6 offset-lg-1 align-self-center figure-lg-margin-0">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5010}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp inverted-bg-color pt-5 pb-5">
+        <div class="container">
+          <div class="row g-xl-5 justify-content-center">
+            <div class="col-lg-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3313}" />
+            </div>
+
+            <div class="col-lg-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3314}" />
+            </div>
+
+            <div class="col-lg-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3315}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp ">
+        <div class="container">
+          <div class="row g-0 ">
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3316}" />
+            </div>
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3317}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3318}" />
+            </div>
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3319}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3320}" />
+            </div>
+
+            <div class="col-lg-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3321}" />
             </div>
           </div>
         </div>
