[TASK] update CE-s styles

--- a/theme/src/scss/content-elements/big-icon-text-link.scss
+++ b/theme/src/scss/content-elements/big-icon-text-link.scss
@@ -26,9 +26,10 @@
 }
 
 .ce-big-icon-text-link__wrp.internal-margins {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 1rem;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
 }
 
 .ce-big-icon-text-link__icon-wrp {
