--- a/theme/src/scss/content-elements/icon-text-link.scss
+++ b/theme/src/scss/content-elements/icon-text-link.scss
@@ -22,9 +22,10 @@
 }
 
 .ce-icon-text-link__wrp.internal-margins {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 1rem;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
 }
 
 .ce-icon-text-link__wrp.inverted-color {
